--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
-Flask==0.9
+Flask==0.10
 Jinja2==2.6
-Werkzeug==0.8.3
-gunicorn==0.17.2
-numpy==1.6.2
-pandas==0.8.1
-scikit-learn==0.16.1
+gunicorn==19.1.1
+Flask-Bootstrap==3.3.5.6
+wtforms==2.0.2
+numpy==1.8.1
+scikit-learn==0.15.2
+Flask-WTF==0.11
+scipy==0.14.0
+
 
